test/res/error/dquote06_res1.tmp
|ca cest \ vraiment \ symep [[]] `` # 
|ca cest \vraiment \symep [[]] `` # 
